Fix Nav menu displaying on mobile devices

--- a/style.css
+++ b/style.css
@@ -131,6 +131,7 @@ a {
 }
 
 .nav-menu {
+    display: none;
     position: fixed;
     top: var(--nav-height);
     left: 0;
